# Franka-teleoperation-direct-ros2-DeLuca

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: local_impedance_params.yaml  remote_impedance_params.yaml
install/: local_setup.sh  setup.sh
install/franka_teleoperation/share/franka_teleoperation/: package.bash  package.zsh
launch/: README.md  local_impedance_launch.py
log/: latest_build
src/: franka_teleoperation_cpp.cpp  franka_teleoperation_local_cpp.cpp  franka_teleoperation_remote_cpp.cpp
src/helper/: FrankaLocal.cpp  FrankaLocal.hpp  FrankaRemote.cpp  FrankaRemote.hpp  README.md  calculatedTorques.hpp  convertArrayToEigenMatrix.hpp  convertArrayToEigenVector.hpp  coriolisTimesDqVector.hpp  dJTimesDqCalculator.hpp  gravityVector.hpp  inertiaMatrix.hpp  jacobianMatrix.hpp  jointTorquesSent.hpp  localCalculatedTorques.hpp  orientationErrorByPoses.hpp  posErrorByPoses.hpp  remoteCalculatedTorques.hpp  rotationErUnifiedAngleAxis.hpp  templateClamp.hpp
